--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,3 @@
+Mongo_URI = mongodb+srv://atharvakharade:hello@lokvanicluster.gnpgz9c.mongodb.net/lokvanidb?retryWrites=true&w=majority&appName=LokvaniCluster
+
 PORT = 3000
