added post request to store user

--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,2 @@
 PORT = 3000
+MONGO_URI = mongodb+srv://atharvakharade:hello@lokvanicluster.gnpgz9c.mongodb.net/lokvanidb?retryWrites=true&w=majority&appName=LokvaniCluster
