--- a/Client/package.json
+++ b/Client/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
