handling server error

--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,1 @@
-PORT = 3000
-MONGO_URI = mongodb+srv://atharvakharade:hello@lokvanicluster.gnpgz9c.mongodb.net/lokvanidb?retryWrites=true&w=majority&appName=LokvaniCluster
+Mongo_URI = mongodb+srv://atharvakharade:hello@cluster0.2wdiush.mongodb.net/lokvanidb?retryWrites=true&w=majority&appName=Cluster0
