--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "framer-motion": "^11.0.20",
     "js-cookie": "^3.0.5",
+    "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
