--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.20",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
