--- a/Client/package.json
+++ b/Client/package.json
@@ -15,18 +15,23 @@
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.2.10",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.20",
+    "hamburger-react": "^2.5.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "ldrs": "^1.0.2",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-toastify": "^10.0.5"
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
