--- a/Server/.env
+++ b/Server/.env
@@ -7,3 +7,7 @@ Cloudinary_cloud_name = "doedb2n6v"
 Cloudinary_api_key = "655248969927415"
 
 Cloudinary_api_secret = "Ps_3PPHI1BxpYfDYCyCCb1NBi-M"
+
+EMAIL_USER = lokvani.notifications@gmail.com
+
+EMAIL_PASS = lokvani@6363
