--- a/Server/.env
+++ b/Server/.env
@@ -10,4 +10,4 @@ Cloudinary_api_secret = "Ps_3PPHI1BxpYfDYCyCCb1NBi-M"
 
 EMAIL_USER = lokvani.notifications@gmail.com
 
-EMAIL_PASS = lokvani@6363
+EMAIL_PASS = ejcdajtkfhhhuqvh
